Ensure post banner photo shifts after Twitter feed disappears

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -294,6 +294,10 @@
 
 .bannerPhoto {
   margin: auto auto auto $twitter-width;
+
+  @media (max-width: 770px)  {
+      margin: auto;
+  }
 }
 
 .post-content {
